client/src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  text-align: center;
  background-color: rgb(176, 176, 176);
}

a {
  color: black;
  text-decoration: none;
}

button {
  cursor: pointer;
}

.header {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 80px;
  background-color: grey;
}

.logo a {
  color: white;
}

.logo,
.links {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.links a {
  padding: 2px 7px;
  margin: 5px;
  border-radius: 5px;
}

.profile-link {
  text-decoration: underline;
}

.home-btn {
  background-color: rgb(142, 233, 253);
  border: 2px solid rgb(56, 166, 190);
  color: rgb(0, 76, 93);
}

.home-btn:hover {
  background-color: rgb(187, 243, 255);
  color: rgb(7, 137, 167);
}

.login-btn {
  padding: 5px 10px;
  border-radius: 5px;
  background-color: rgb(101, 249, 167);
  border: 2px solid rgb(27, 196, 103);
  color: rgb(2, 98, 45);
}

.login-btn:hover {
  background-color: rgb(158, 255, 202);
  color: rgb(21, 143, 76);
}

.product {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 30px;
  padding: 30px;
  margin: 20px;
  width: 500px;
  background-color: white;
}

.cmd-btns {
  display: flex;
  justify-content: center;
  gap: 10px;
  height: 40px;
}


.btn3 {
  border-radius: 10px;
  display: inline-block;
  width: 60px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 10pt;
  text-align: center;
  font-weight: bold;
  box-shadow: 2px 2px 1px rgb(0, 0, 0, .4);
  height: 25px;
}

.view {
  background-color: rgb(157, 237, 255);
  border: 2px solid rgb(102, 207, 231);
  color: rgb(7, 104, 126);
}

.edit {
  background-color: rgb(94, 247, 163);
  border: 2px solid rgb(38, 205, 113);
  color: rgb(10, 126, 62);
}

.delete {
  background-color: rgb(247, 173, 173);
  border: 2px solid rgb(238, 110, 110);
  color: rgb(152, 35, 35);
}

.view:hover {
  background-color: rgb(194, 244, 255);
  border: 2px solid rgb(132, 224, 245);
  color: rgb(22, 166, 198);
  margin-top: 2px;
  box-shadow: none;
}

.edit:hover {
  background-color: rgb(106, 255, 173);
  border: 2px solid rgb(67, 229, 140);
  color: rgb(27, 185, 98);
  margin-top: 2px;
  box-shadow: none;
}

.delete:hover {
  background-color: rgb(255, 214, 214);
  border: 2px solid rgb(255, 162, 162);
  color: rgb(222, 84, 84);
  margin-top: 2px;
  box-shadow: none;
}

.home-con {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
}

.filter {
  width: 90%;
  display: flex;
  justify-content: end;
  gap: 10px;
}

.con {
  display: flex;
  justify-content: center;
  align-items: start;
  gap: 30px;
}

.profile-con {
  width: 100vw;
  height: 100vh;
}

.row1 {
  display: flex;
  justify-content: space-between;
  margin: 0px;
}

.row1>* {
  margin-top: 10px;
}

.date-purchased {
  margin-bottom: 0px;
}

.purchase {
  display: flex;
  border: 2px solid grey;
  padding: 10px;
  margin: 10px;
  height: fit-content;
  width: 500px;
  gap: 20px;
}

.infos {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.banner {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 150px;
}

#wide {
  width: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.box1,
.box2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 20px;
  background-color: rgb(217, 217, 217);
  border: 2px solid white;
}

.box1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 550px;
}

.box2 {
  display: flex;
  flex-direction: column;
  align-items: start;
}

.one,
.two {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.one h1 {
  margin-top: 20px;
  margin-bottom: 20px;
}

.btn-space {
  margin-top: 30px;
  margin-bottom: 10px;
  height: 48px;

}

.login-con {
  display: flex;
  justify-content: center;
  gap: 50px;
}

.login-con input {
  border-radius: 5px;
  border: 1.5px solid grey;
  padding: 2px 5px;
}

.login-con input[type=submit] {
  width: 80px;
  margin-top: 20px;
  background-color: rgb(148, 220, 238);
  border: 1.5px solid rgb(69, 135, 144);
  color: rgb(33, 33, 33);
  border-radius: 5px;
}

.login-con input[type=submit]:hover {
  background-color: rgb(198, 244, 255);
  border: 1.5px solid rgb(96, 165, 174);
  color: rgb(33, 33, 33);
}



.col1,
.col2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px;
  background-color: rgb(217, 217, 217);
  border: 2px solid white;
  width: 300px;
  height: fit-content;
}

.col1 h2,
.col2 h2 {
  margin-top: 0;
}

.col1 form,
.col2 form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.login-btn-space {
  display: flex;
  width: 90%;
  justify-content: end;
}

.login-form {
  width: 300px;
}

.names {
  display: flex;
  gap: 10px;
  width: 250px;
  margin: 0px;
}

.others {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 250px;
}

.names input {
  width: 114px;
}

.others input {
  width: 250px;
}


.product-con {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: start;
  gap: 50px;
  padding: 50px;
}

.product-con img {
  width: 400px;
}


.line {
  display: flex;
  gap: 20px;
  width: auto;
}

.info {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 350px;
  gap: 20px;
  background-color: white;
  padding: 20px 50px;
}

.info a {
  text-decoration: underline;
}

.info a:hover {
  color: rgb(101, 101, 101);
}

.info>* {
  margin: 0px;
}


.popup {
  position: absolute;
  top: 20%;
  left: 40%;
  background-color: rgb(211, 211, 211);
  padding: 50px;
  border-radius: 10px;
  border: 2px solid rgb(62, 62, 62);
  /* z-index: -1; */
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67, 57, 88, 0.5);
  /* semi-transparent blue */
  z-index: 5;

}

.show-popup {
  z-index: 1
}

.popup form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 20px;
}

.btns {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 25px;
  gap: 20px;
}

.btns>input,
.btns>button {
  width: 100px;
  border: 2px solid grey;
  border-radius: 5px;
}

.btns>input {
  color: white;
  background-color: rgb(63, 63, 63);
  border: 2px solid grey;
}

.btns>input:hover {
  background-color: rgb(102, 102, 102);

}

.btns>button:hover {
  background-color: rgb(154, 154, 154);

}

.buy-btn,
.out-of-stock {
  color: white;
  background-color: rgb(105, 105, 105);
  border: 2px solid rgb(49, 49, 49);
  border-radius: 5px;
  padding: 5px;
  width: 200px;
}

.buy-btn:hover {
  background-color: rgb(150, 150, 150);
}


.bold {
  font-size: 12pt;
  font-weight: bold;
}


.title {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 50px;
}

.create-con {
  display: flex;
  justify-content: center;
}

.create-con form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  padding: 0px 20px 20px 20px;
  margin-top: 50px;
  border: 2px solid white;
  background-color: rgb(217, 217, 217);
}

.inputs {
  display: flex;
  gap: 20px;
  font-family: 'Arial'
}

.input1,
.input2 {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.input1>*,
.input2>* {
  height: 20px;
  width: 200px;
  padding: 0px 5px;
  margin: 0px;
  border: 1px solid grey;
}

.input2>select {
  height: 21px;
  width: 200px;
}

.input1>textarea {
  height: 60px;
  width: 200px;
  padding-top: 3px;
  font-family: 'Arial'
}


.add-product {
  background-color: rgb(94, 94, 94);
  color: white;
  border: 2px solid black;
  padding: 2px 5px;
  border-radius: 5px;
}

.add-product:hover {
  background-color: rgb(122, 122, 122);
  border: 2px solid rgb(53, 53, 53);
}

.form-btns {
  display: flex;
  gap: 50px;
}


.errors {
  background-color: pink;
  border: 1px, solid rgb(255, 66, 66);
  padding: 5px 10px;
  margin: 0px 5px 10px 5px;
  height: fit-content;
}

.errors-product {
  background-color: pink;
  border: 1px, solid rgb(255, 66, 66);
  padding: 5px 10px;
  margin: 0px 5px 10px 5px;
  width: 185px;
  height: fit-content;
}



/* Carousel */

.carousel {
  position: relative;
  overflow: hidden;
  width: 100%;
  max-width: 400px;
  /* Optional max width */
  margin: 0;
}

/* Slides wrapper */
.carousel-inner {
  display: flex;
  transition: transform 0.5s ease-in-out;
  width: 100%;
}

/* Each slide */
.carousel-item {
  flex: 0 0 100%;
  opacity: 0;
  transition: opacity 0.5s ease;
  position: absolute;
  top: 0;
  left: 0;
}

/* Show active slide */
.carousel-item.active {
  position: relative;
  opacity: 1;
}

/* Image styling */
.carousel-item img {
  display: block;
  width: 100%;
  height: auto;
}

/* Navigation arrows */
.carousel-control-prev,
.carousel-control-next {
  position: absolute;
  top: 50%;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  transform: translateY(-50%);
  background: rgba(0, 0, 0, 0.2);
  color: rgb(255, 255, 255, .5);
  border: none;
  font-size: 2rem;
  padding: 0;
  cursor: pointer;
  z-index: 10;
}

.carousel-control-prev:hover,
.carousel-control-next:hover {
  background: rgba(0, 0, 0, 0.4);
  color: white;
}

.carousel-control-prev {
  left: 10px;
}

.carousel-control-next {
  right: 10px;
}

/* Indicators */
.carousel-indicators {
  display: flex;
  justify-content: center;
  margin-top: 10px;
  padding: 0;
  list-style: none;
}

.carousel-indicators li {
  width: 10px;
  height: 10px;
  background-color: #999;
  border-radius: 50%;
  margin: 0 5px;
  cursor: pointer;
  transition: background-color 0.3s;
}

.carousel-indicators .active {
  background-color: #333;
}

